# GeoAI

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json
.github/workflows/: accuracy-bot.yml  check-file-size.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml  ml-training.yml  rebuild-faiss.yml  sync-backend.yml  sync-data-files.yml  (+2 more)
Debug/: REPORT-v1.1.1.md  REPORT.md
backend/: Dockerfile  README.md  app.py  config.py  dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/api/: admin.py  game.py  health.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: atlasmind_pipeline.py  gemini_service.py  redis_service.py  supabase_service.py
backend/app/utils/: logger.py  question_selector_helper.py
backend/atlas_engine/: __init__.py  bayesian_network.py  confidence_calculator.py  embeddings.py  faiss_index.py  feature_importance.py  inference_engine.py  information_gain.py  probability_manager.py  question_selector.py
backend/atlas_engine/cpp/: probability_ops.cpp  setup.py
backend/core/: confidence_calculator.py  inference_engine.py  probability_manager.py  question_selector.py
backend/data/: countries.json  questions.json
backend/models/: item_model.py
backend/scripts/: migrate_questions.py  migrate_seed_data.py  run_accuracy_test.py  train_feature_importance.py
backend/services/: firebase_service.py
backend/utils/: data_loader.py
frontend/: .env.example  README.md  bot.html  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  tsconfig.json
(+160 files in other folders)
