[project]
name = "guessmyplace-backend"
version = "2.0.0"
description = "GuessMyPlace — Atlas GMP Engine Backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
exclude = ["venv", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"